<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dato"
            style="@style/TextAppearance.AppCompat.Headline"
            android:padding="6dp"
            android:text="@string/liste_dato"
            />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dato"
            android:columnCount="4"
            android:rowCount="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fra"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:padding="6dp"
            android:text="@string/liste_fra"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fraInfo"
            android:padding="6dp"
            style="@style/TextAppearance.AppCompat.Subhead"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/til"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:padding="6dp"
            android:text="@string/liste_til"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tilInfo"
            android:padding="6dp"
            style="@style/TextAppearance.AppCompat.Subhead"
            />
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fraTid"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:padding="6dp"
            android:text="@string/liste_avreise"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fraTidInfo"
                android:padding="6dp"
                style="@style/TextAppearance.AppCompat.Subhead"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tilTid"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:padding="6dp"
                android:text="@string/liste_ankomst"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tilTidInfo"
                android:padding="6dp"
                style="@style/TextAppearance.AppCompat.Subhead"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kjenteStopp"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:padding="6dp"
                android:text="@string/liste_stopp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kjenteStoppInfo"
                android:padding="6dp"
                style="@style/TextAppearance.AppCompat.Subhead"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/antallLedig"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:padding="6dp"
                android:text="@string/liste_ledig_plass"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/antallLedigInfo"
                android:padding="6dp"
                style="@style/TextAppearance.AppCompat.Subhead"
                />
        </GridLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>